--- a/package.json
+++ b/package.json
@@ -1,34 +1,48 @@
 {
-  "name": "micro-basic",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server",
-    "start:multiple": "cross-env MODE=multiple webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-transform-react-jsx": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "less-loader": "^6.2.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
-  },
+  "name": "base",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@zenview/micro-config-overrides": "^0.1.5",
-    "qiankun": "^2.4.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "vue": "^2.6.11",
-    "zone.js": "^0.10.2"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "antd": "^4.13.1",
+    "node-sass": "^5.0.0",
+    "qiankun": "^2.4.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
